<resources>
    <string name="app_name">IBM</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="register">Register</string>
    <string name="minimum_password">Password too short, enter minimum 4 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="email">Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="practice_interview">Practice Interview</string>
    <string name="practice_presentation">Practice Presentation</string>
    <string name="history">HISTORY</string>
    <string name="home">HOME</string>

    <string name="what_s_on_your_mind">Enter your query</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>

</resources>
