<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9900ff"
    tools:context=".home">

    <Button
        android:id="@+id/button2"
        style="@style/MyButtonStyle.background"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:text="@string/practice_interview"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        style="@style/MyButtonStyle.background"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="268dp"
        android:text="@string/practice_presentation"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button5"
        style="@style/MyButtonStyle.background"
        android:layout_width="164dp"
        android:layout_height="72dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/history"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:text="@string/home" />


</RelativeLayout>