<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#9900ff"
    tools:context=".login">


    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="95dp"
        android:text="@string/login"
        android:textColor="#ffff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="175dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        tools:targetApi="o" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="106dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button"
        style="@style/MyButtonStyle.background"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/button"
        android:layout_alignLeft="@id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="160dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/log_in"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/su_button2"
        style="@style/MyButtonStyle.background"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/sign_up1"
        android:textColor="#ffffff"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="222dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        tools:targetApi="o" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</RelativeLayout>