<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9900ff"
    tools:context=".signUp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="54dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="407dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="157dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="409dp"
        android:layout_height="66dp"
        android:layout_alignStart="@+id/email"
        android:layout_alignLeft="@id/password"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="212dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textSize="25sp"
        tools:targetApi="o" />


    <Button
        android:id="@+id/done"
        style="@style/MyButtonStyle.background"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginBottom="82dp"
        android:background="@drawable/rounded_shape"
        android:onClick="createUser"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/log"
        style="@style/MyButtonStyle.background"
        android:layout_width="159dp"
        android:layout_height="59dp"
        android:layout_alignTop="@+id/done"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_shape"
        android:text="SIGN IN"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>